--- a/Dockerfile_client
+++ b/Dockerfile_client
@@ -1,7 +1,7 @@
 # Use a imagem oficial do Python
-FROM python:3.9-slim
+FROM python:3.12
 
-# Defina o diretório de trabalho no contêiner
+# Diretório de trabalho no contêiner
 WORKDIR /app
 
 # Copie o código do cliente para o contêiner
