--- a/Dockerfile_device
+++ b/Dockerfile_device
@@ -4,8 +4,10 @@ FROM python:3.12-slim
 # Diretório de trabalho no contêiner
 WORKDIR /app
 
-# Copie o código do dispositivo para o contêiner
+# Copiando o código do dispositivo para o contêiner
 COPY device.py .
 
-# Comando padrão a ser executado quando o contêiner for iniciado
+# Expondo a porta
+EXPOSE 8888
+
 CMD ["python", "device.py"]
