--- a/Dockerfile_server
+++ b/Dockerfile_server
@@ -10,7 +10,7 @@ COPY server.py .
 # Instale as dependências necessárias
 RUN pip install flask
 
-# Exponha a porta 5000 para acesso externo
+# Exponha a porta 5555 e 8888 para acesso externo
 EXPOSE 5555
 EXPOSE 8888
 # Comando padrão a ser executado quando o contêiner for iniciado
